tests/snapshots/init__init_one_remote_tree.snap
---
source: tests/init.rs
expression: tree_manifest(&base_root)
---
entries:
  ".agent-workspace":
    kind: dir
  ".agent-workspace/repo-cache":
    kind: dir
  ".agent-workspace/repo-cache/repo1.git":
    kind: dir
